all items in user stories covered. the only bug im trying to fix at the moment is to update the deck of cards when a different subject is selected. currently having issues with multiple functions being passed to onClick() but im trying to merge the two

--- a/flashcard-app/src/components/DisplayCard.css
+++ b/flashcard-app/src/components/DisplayCard.css
@@ -1,9 +1,9 @@
 .card{
-    display: grid;
+    display: block;
     grid-template-columns: repeat(3, 1fr);
     justify-content: center;
     align-items: center;
-    position: absolute;
+    position: fixed;
     border-radius: .25rem;
     box-shadow: 0 0 5px 2px rgba(0,0,0,.3);
     background-color: white;
@@ -12,18 +12,41 @@
     margin-left: 650px;
     margin-top: -50px;
     padding-left: 2em;
+   
 }
-.title{
+
+.selected {
+    background-color: coral;
+  }
+
+.card-index{
+    align-items: center;
+    position: fixed;
+    margin-top: 380px;
+    margin-left: 900px;
+}
+.card-title{
     padding-left: 2em;
+    margin-top: 50px;
+    text-decoration: underline;
+    
 }
 .content{
     padding-left: 3em;
+    margin-top: 100px
 }
-.button-position{
+.button-next{
     align-items: center;
-    position: absolute;
+    position: fixed;
     margin-top: 380px;
     margin-left: 1000px;
+
+}
+.button-prev{
+    align-items: center;
+    position: fixed ;
+    margin-top: 380px;
+    margin-left: 800px;
 
 }
 
