--- a/flashcard-app/src/components/SubjectList.css
+++ b/flashcard-app/src/components/SubjectList.css
@@ -12,4 +12,10 @@
 }
 .selected {
     color: red;
+
 }
+
+.tableSelected {
+    background-color:rgb(93, 17, 155);
+    color: white;
+  }
